--- a/.github/workflows/OpenWrt-Build.yml
+++ b/.github/workflows/OpenWrt-Build.yml
@@ -105,14 +105,13 @@ jobs:
           name: openwrt-scripts-debug
           path: openwrt/scripts
 
-      # 这里用 GH_TOKEN 作为 token 变量
       - name: Create GitHub Release and upload firmware
         uses: ncipollo/release-action@v1
         with:
+          token: ${{ secrets.IGH_TOKEN }}
           tag: openwrt-x86_64-${{ github.run_id }}
           name: OpenWrt x86_64 Build ${{ github.run_number }}
           body: |
             🎉 OpenWrt x86_64 自动构建成功！
             📅 编译时间：${{ github.event.workflow_dispatch.timestamp }}
           artifacts: openwrt/bin/targets/x86/64/**/*
-          token: ${{ secrets.GH_TOKEN }}
