--- a/.github/workflows/OpenWrt-Build.yml
+++ b/.github/workflows/OpenWrt-Build.yml
@@ -1,158 +1,35 @@
-name: Build OpenWrt x86_64
+name: Test Latest OpenWrt Clone
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 2 * * *'  # 每天凌晨2点自动触发检查
 
 jobs:
-  build:
+  test-clone:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Install jq (JSON工具)
+      - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
-
-      - name: Restore last built version cache
-        id: cache-version
-        uses: actions/cache@v3
-        with:
-          path: last_build_version.txt
-          key: last_build_version
-          restore-keys: last_build_version
 
       - name: Get latest OpenWrt stable release tag
         id: get_latest_tag
         run: |
-          LATEST_TAG=$(curl -s https://api.github.com/repos/openwrt/openwrt/releases/latest | jq -r '.tag_name')
+          echo "Fetching latest release tag..."
+          RESPONSE=$(curl -s https://api.github.com/repos/openwrt/openwrt/releases/latest)
+          echo "GitHub API response:"
+          echo "$RESPONSE"
+          LATEST_TAG=$(echo "$RESPONSE" | jq -r '.tag_name')
+          echo "Latest tag: $LATEST_TAG"
           echo "latest_tag=$LATEST_TAG" >> $GITHUB_OUTPUT
 
-      - name: Compare versions
-        id: compare
+      - name: Verify latest tag
         run: |
-          LAST_VER=$(cat last_build_version.txt 2>/dev/null || echo "none")
-          echo "Last built version: $LAST_VER"
-          echo "Latest upstream version: ${{ steps.get_latest_tag.outputs.latest_tag }}"
-          if [ "$LAST_VER" = "${{ steps.get_latest_tag.outputs.latest_tag }}" ]; then
-            echo "No new version detected. Skipping build."
-            exit 78
-          else
-            echo "New version detected. Proceeding."
-          fi
-
-      - name: Checkout repo
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Free up disk space
-        uses: jlumbroso/free-disk-space@main
-        with:
-          tool-cache: true
-          android: true
-          dotnet: true
-          haskell: true
-          large-packages: true
-          swap-storage: true
-
-      - name: Show available disk space
-        run: df -h
-
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            python3 python3-setuptools python3-distutils-extra \
-            build-essential clang flex bison g++ gawk \
-            gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
-            rsync unzip zlib1g-dev file wget python3-pyelftools ccache
-
-      - name: Clone OpenWrt source
-        run: |
-          git clone --depth=1 --branch ${{ steps.get_latest_tag.outputs.latest_tag }} https://github.com/openwrt/openwrt.git
-
-      - name: Copy feeds.conf.default
-        run: |
-          if [ -f config/feeds.conf.default ]; then
-            cp config/feeds.conf.default openwrt/feeds.conf.default
-          else
-            echo "No feeds.conf.default found, skipping copy"
-          fi
-
-      - name: Update all feeds
-        run: |
-          cd openwrt
-          ./scripts/feeds update -a
-          ./scripts/feeds install -a
-
-      - name: Copy config and scripts
-        run: |
-          cp config/.config openwrt/.config
-          cp config/customize.sh openwrt/
-          cp -r scripts/. openwrt/scripts/
-          chmod +x openwrt/customize.sh openwrt/scripts/*.sh
-
-      - name: List openwrt/scripts contents
-        run: ls -l openwrt/scripts
-
-      - name: Run ext_packages.sh if present
-        run: |
-          cd openwrt
-          if [ -f scripts/ext_packages.sh ]; then
-            chmod +x scripts/ext_packages.sh
-            ./scripts/ext_packages.sh
-          else
-            echo "❌ ext_packages.sh not found!"
+          if [ -z "${{ steps.get_latest_tag.outputs.latest_tag }}" ] || [ "${{ steps.get_latest_tag.outputs.latest_tag }}" = "null" ]; then
+            echo "Failed to get latest tag!"
             exit 1
           fi
 
-      - name: Clean customize.sh to remove internal 'cd openwrt'
-        run: sed -i '/cd openwrt/d' openwrt/customize.sh
-
-      - name: Run customize.sh
+      - name: Clone OpenWrt source repo with latest tag
         run: |
-          cd openwrt
-          chmod +x customize.sh
-          ./customize.sh
-
-      - name: Make defconfig and download sources
-        run: |
-          cd openwrt
-          make defconfig
-          make download -j8
-
-      - name: Build OpenWrt (x86_64)
-        run: |
-          cd openwrt
-          make -j$(nproc) || make -j1 V=s
-
-      - name: Extract OpenWrt version
-        id: getversion
-        run: |
-          VERSION=$(grep '^VERSION:=' openwrt/include/version.mk | cut -d= -f2 | tr -d ' ')
-          PATCHLEVEL=$(grep '^PATCHLEVEL:=' openwrt/include/version.mk | cut -d= -f2 | tr -d ' ')
-          FULLVERSION="${VERSION}.${PATCHLEVEL}"
-          echo "fullversion=$FULLVERSION" >> $GITHUB_OUTPUT
-
-      - name: Get build time
-        id: buildtime
-        run: echo "time=$(date '+%Y-%m-%d %H:%M:%S')" >> $GITHUB_OUTPUT
-
-      - name: Create GitHub Release and upload firmware
-        uses: ncipollo/release-action@v1
-        with:
-          token: ${{ secrets.IGH_TOKEN }}
-          tag: openwrt-x86_64-${{ github.run_id }}
-          name: OpenWrt x86_64 ${{ steps.getversion.outputs.fullversion }}
-          body: |
-            🎉 OpenWrt x86_64 ${{ steps.getversion.outputs.fullversion }}
-            📅 ${{ steps.buildtime.outputs.time }}
-          artifacts: openwrt/bin/targets/x86/64/openwrt-x86-64-generic-squashfs-combined-efi.img.gz
-
-      - name: Save latest built version to cache
-        run: echo "${{ steps.get_latest_tag.outputs.latest_tag }}" > last_build_version.txt
-
-      - uses: actions/cache@v3
-        with:
-          path: last_build_version.txt
-          key: last_build_version
+          git clone --depth=1 --branch ${{ steps.get_latest_tag.outputs.latest_tag }} https://github.com/openwrt/openwrt.git
+          ls -l openwrt
