--- a/.github/workflows/OpenWrt-Build.yml
+++ b/.github/workflows/OpenWrt-Build.yml
@@ -41,7 +41,10 @@ jobs:
           fi
 
       - name: Clone OpenWrt source
-        run: git clone --depth=1 --branch ${{ steps.get_latest_tag.outputs.latest_tag }} https://github.com/openwrt/openwrt.git
+        run: |
+          git clone --depth=1 --branch $LATEST_TAG https://github.com/openwrt/openwrt.git
+        env:
+          LATEST_TAG: ${{ steps.get_latest_tag.outputs.latest_tag }}
 
       - name: Free up disk space
         uses: jlumbroso/free-disk-space@main
@@ -64,11 +67,6 @@ jobs:
             build-essential clang flex bison g++ gawk \
             gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
             rsync unzip zlib1g-dev file wget python3-pyelftools ccache ash
-
-      - name: Run Nikki feed.sh script to add Nikki feeds
-        run: |
-          cd openwrt
-          wget -O - https://github.com/nikkinikki-org/OpenWrt-nikki/raw/refs/heads/main/feed.sh | ash
 
       - name: Update all feeds
         run: |
