--- a/.github/workflows/OpenWrt-Build.yml
+++ b/.github/workflows/OpenWrt-Build.yml
@@ -1,25 +1,99 @@
-#!/bin/bash
-# 简单测试复制操作
+name: Build OpenWrt x86_64
 
-if [ ! -f config/.config ]; then
-  echo "缺少 config/.config 文件"
-  exit 1
-fi
+on:
+  workflow_dispatch:
+  schedule:
+    - cron: '0 0 1 1,4,7,10 *'
 
-if [ ! -f config/customize.sh ]; then
-  echo "缺少 config/customize.sh 文件"
-  exit 1
-fi
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-if [ ! -d scripts ]; then
-  echo "缺少 scripts 文件夹"
-  exit 1
-fi
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-mkdir -p openwrt/scripts
 
-cp config/.config openwrt/.config
-cp config/customize.sh openwrt/
-cp -r scripts/. openwrt/scripts/
 
-echo "复制完成，测试通过！"
+      - name: Clone OpenWrt source
+        run: git clone -b v24.10.2 --single-branch --depth=1 https://github.com/openwrt/openwrt.git
+
+      - name: Copy feeds.conf.default
+        run: |
+          if [ -f config/feeds.conf.default ]; then
+            cp config/feeds.conf.default openwrt/feeds.conf.default
+          else
+            echo "No feeds.conf.default found in config/, skipping copy"
+          fi
+
+      - name: Update all feeds
+        run: |
+          cd openwrt
+          ./scripts/feeds update -a
+          ./scripts/feeds install -a
+
+      - name: Copy config and scripts
+        run: |
+          cp config/.config openwrt/.config
+          cp config/customize.sh openwrt/
+          cp -r scripts/. openwrt/scripts/
+          chmod +x openwrt/customize.sh openwrt/scripts/*.sh
+
+      - name: List openwrt/scripts contents
+        run: ls -l openwrt/scripts
+
+      - name: Run ext_packages.sh if present (clone OpenWrt-nikki etc.)
+        run: |
+          cd openwrt
+          if [ -f scripts/ext_packages.sh ]; then
+            chmod +x scripts/ext_packages.sh
+            ./scripts/ext_packages.sh
+          else
+            echo "❌ ext_packages.sh not found!"
+            exit 1
+          fi
+
+      - name: Clean customize.sh to remove internal 'cd openwrt'
+        run: sed -i '/cd openwrt/d' openwrt/customize.sh
+
+      - name: Run customize.sh
+        run: |
+          cd openwrt
+          chmod +x customize.sh
+          ./customize.sh
+
+      - name: Make defconfig and download sources
+        run: |
+          cd openwrt
+          make defconfig
+          make download -j8
+
+      - name: Build OpenWrt (x86_64)
+        run: |
+          cd openwrt
+          make -j$(nproc) || make -j1 V=s
+
+      - name: Extract OpenWrt version
+        id: getversion
+        run: |
+          VERSION=$(grep '^VERSION:=' openwrt/include/version.mk | cut -d= -f2 | tr -d ' ')
+          PATCHLEVEL=$(grep '^PATCHLEVEL:=' openwrt/include/version.mk | cut -d= -f2 | tr -d ' ')
+          FULLVERSION="${VERSION}.${PATCHLEVEL}"
+          echo "fullversion=$FULLVERSION" >> $GITHUB_OUTPUT
+
+      - name: Get build time
+        id: buildtime
+        run: echo "time=$(date '+%Y-%m-%d %H:%M:%S')" >> $GITHUB_OUTPUT
+
+      - name: Create GitHub Release and upload firmware
+        uses: ncipollo/release-action@v1
+        with:
+          token: ${{ secrets.IGH_TOKEN }}
+          tag: openwrt-x86_64-${{ github.run_id }}
+          name: OpenWrt x86_64 ${{ steps.getversion.outputs.fullversion }}
+          body: |
+            🎉 OpenWrt x86_64 ${{ steps.getversion.outputs.fullversion }} 
+            📅 ${{ steps.buildtime.outputs.time }}
+          artifacts: openwrt/bin/targets/x86/64/openwrt-x86-64-generic-squashfs-combined-efi.img.gz
